--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -162,5 +162,74 @@
   transition: 0.4s;
 } */
 
+/* MOBILE---------------------------------------------------------------------------------------------------- */
+@media screen and (max-width: 800px) {
+  .nav {
+    width: 100%;
+    padding-left: 50%;
+  }
 
+  .logo {
+    width: 50%;
+    justify-content: left;
+    margin-left: 20%;
+  }
 
+  @media screen and (max-width: 800px) {
+    .menu {
+      display: block;
+      border: 2px solid white;
+      z-index: 1;
+    }
+
+    .mobileMenu {
+      height: 40%;
+      padding-top: 20%;
+      margin-top: 20%;
+      border: 2px solid rgb(123, 36, 36);
+      z-index: 1;
+    }
+
+    .logoImage {
+      width: 35%;
+      justify-content: left;
+      margin-left: 20%;
+    }
+
+    .navAnchors {
+      display: none; /* Hide anchor links in mobile view */
+    }
+
+    .shopContainer {
+      display: none; /* Hide shop button in mobile view */
+    }
+
+    .nav {
+      flex-direction: column;
+      align-items: center;
+      padding: 10px;
+      display: flex;
+      flex-direction: row;
+    }
+
+    /* .logoImage {
+      width: 50%;
+      margin: 10px 0;
+    } */
+
+    .navAnchors {
+      flex-direction: column;
+      padding: 10px;
+    }
+
+    .navAnchor1,
+    .navAnchor2 {
+      padding: 10px 0;
+      text-align: center;
+    }
+
+    .shopContainer {
+      left: 50%;
+    }
+  }
+}
